# lexitek-rotation-table

./: .gitignore  CMakeLists.txt  README.md
cppServer/src/: automationControl.h  backend_rpc.h  colors.h  fileControl.h  hardwareControl.h  main.cpp  rotation.cpp  timerControl.h
lvClient/grpc-labview-master/.github/workflows/: build_release_artifacts.yml
lvClient/grpc-labview-master/build-it/: stage_artifacts.py
proto/: MSG_Position.proto
qtClient/: CMakeLists.txt
qtClient/src/: main.cpp  mainwindow.cpp  mainwindow.h  shell.h
qtClient/src/imgs/: opticalHeader.qrc
rotation-backend/: CMakeLists.txt
rotation-backend/src/: rotation.h
rotation-frontend/src/: frontend_rpc.h  mainwindow.ui
rotation-test/: CMakeLists.txt
rotation-test/src/: doSimulation.cpp
unitTests/src/: doTest.cpp
